repair single-product

--- a/single-product.html
+++ b/single-product.html
@@ -44,7 +44,8 @@
     <script src="var.js"></script>
     <script>
         if (typeof(Storage) !== "undefined")
-          LoadSP = localStorage.getItem("LoadSP");
+            LoadSP = localStorage.getItem("LoadSP");
+        if (LoadSP == null) LoadSP = 1;
     </script>
     
 </head>
@@ -676,6 +677,6 @@
     <!-- Slider -->
     <script type="text/javascript" src="js/bxslider.min.js"></script>
     <script type="text/javascript" src="js/script.slider.js"></script>
-</body>
 
+</body>
 </html>
