--- a/checkout.html
+++ b/checkout.html
@@ -40,6 +40,7 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+    <script src="var.js"></script>
 </head>
 
 <body>
@@ -293,51 +294,53 @@
                     <div class="single-sidebar">
                         <h2 class="sidebar-title">Tìm kiếm sản phẩm</h2>
                         <form action="">
-                            <input type="text" placeholder="Tìm kiếm sản phẩm...">
-                            <input type="submit" value="Tìm kiếm">
+                            <input type="text" placeholder="Tìm kiếm...">
+                            <input type="submit" value="Tìm">
                         </form>
                     </div>
 
                     <div class="single-sidebar">
                         <h2 class="sidebar-title">Các sản phẩm mới</h2>
-                        <div class="thubmnail-recent">
-                            <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
-                            <h2><a href="single-product.html">Sony Smart TV - 2015</a></h2>
-                            <div class="product-sidebar-price">
-                                <ins>$700.00</ins> <del>$100.00</del>
-                            </div>
-                        </div>
-                        <div class="thubmnail-recent">
-                            <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
-                            <h2><a href="single-product.html">Sony Smart TV - 2015</a></h2>
-                            <div class="product-sidebar-price">
-                                <ins>$700.00</ins> <del>$100.00</del>
-                            </div>
-                        </div>
-                        <div class="thubmnail-recent">
-                            <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
-                            <h2><a href="single-product.html">Sony Smart TV - 2015</a></h2>
-                            <div class="product-sidebar-price">
-                                <ins>$700.00</ins> <del>$100.00</del>
-                            </div>
-                        </div>
-                        <div class="thubmnail-recent">
-                            <img src="img/product-thumb-1.jpg" class="recent-thumb" alt="">
-                            <h2><a href="single-product.html">Sony Smart TV - 2015</a></h2>
-                            <div class="product-sidebar-price">
-                                <ins>$700.00</ins> <del>$100.00</del>
-                            </div>
+                        <div id="SPNew">
+                            <script>
+                                // San pham moi 
+                                var n = data.length - 1;
+                                for (var i=n; i >= n-3 && i>=0; i--)
+                                {
+                                    var t = "'" + data[i].LinkImageSP + "'";
+                                    txt += '<div class="thubmnail-recent"><img src="'
+                                            +data[i].LinkImageSP+
+                                            '" class="recent-thumb" alt=""><h2><a href="single-product.html" onclick="setLoadSP('
+                                            + t + ')">'
+                                            +data[i].NameSP+
+                                            '</a></h2><div class="product-sidebar-price"><ins>$'
+                                            +data[i].SaleSP+
+                                            '</ins> <del>$'
+                                            +data[i].money+
+                                            '</del></div></div>';
+                                }
+                                            
+                                document.getElementById("SPNew").innerHTML = txt;
+                            </script>
                         </div>
                     </div>
 
                     <div class="single-sidebar">
                         <h2 class="sidebar-title">Sản phẩm bán chạy</h2>
-                        <ul>
-                            <li><a href="single-product.html">Sony Smart TV - 2015</a></li>
-                            <li><a href="single-product.html">Sony Smart TV - 2015</a></li>
-                            <li><a href="single-product.html">Sony Smart TV - 2015</a></li>
-                            <li><a href="single-product.html">Sony Smart TV - 2015</a></li>
-                            <li><a href="single-product.html">Sony Smart TV - 2015</a></li>
+                        <ul id="SPBanChay">
+                            <script>
+                                // San pham ban chay
+                                txt = "";
+                                var n = data.length - 1;
+                                for (var i=n; i >= n-4 && i>=0; i--)
+                                {
+                                    var t = "'" + data[i].LinkImageSP + "'";
+                                    txt += '<li><a href="single-product.html" onclick="setLoadSP('
+                                            + t + ')">' + data[i].NameSP + '</a></li>';
+                                }
+
+                                document.getElementById("SPBanChay").innerHTML = txt;
+                            </script>
                         </ul>
                     </div>
                 </div>
