--- a/single-product.html
+++ b/single-product.html
@@ -43,9 +43,14 @@
 
     <script src="var.js"></script>
     <script>
-        if (typeof(Storage) !== "undefined")
+        try
+        {
             LoadSP = localStorage.getItem("LoadSP");
-        if (LoadSP == null) LoadSP = 1;
+        } 
+        catch (exception) {
+            LoadSP = 1;
+        }
+        
     </script>
     
 </head>
