--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
             <div class="shopping-item" ondrop="dropCart(event)" ondragover="allowDrop(event)">
               <a href="cart.html">
                 <i class="fa fa-shopping-cart"></i>
-                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$100</span>
-                <span class="product-count">99</span></a>
+                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt"></span>
+                <span class="product-count"></span></a>
             </div>
           </div>
         </div>
