--- a/text.html
+++ b/text.html
@@ -153,9 +153,9 @@
           <div class="col-sm-6">
             <div class="shopping-item">
               <a href="cart.html"
-                >Giỏ Hàng - <span class="cart-amunt">$100</span>
+                >Giỏ Hàng - <span class="cart-amunt"></span>
                 <i class="fa fa-shopping-cart"></i>
-                <span class="product-count">99</span></a
+                <span class="product-count"></span></a
               >
             </div>
           </div>
