--- a/cart.html
+++ b/cart.html
@@ -154,8 +154,8 @@
             <div class="shopping-item">
               <a href="cart.html">
                 <i class="fa fa-shopping-cart"></i>
-                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$100</span>
-                <span class="product-count">99</span></a>
+                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt"></span>
+                <span class="product-count"></span></a>
             </div>
           </div>
         </div>
@@ -281,7 +281,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="product-bit-title text-center">
-                        <h2>Giỏ hàng</h2>
+                        <h2>Giỏ Hàng</h2>
                     </div>
                 </div>
             </div>
@@ -900,29 +900,32 @@
       // San pham moi 
       var n = data.length - 1;
       for (var i=n; i >= n-3 && i>=0; i--)
+      {
+          var t = "'" + data[i].LinkImageSP + "'";
           txt += '<div class="thubmnail-recent"><img src="'
                   +data[i].LinkImageSP+
-                  '" class="recent-thumb" alt=""><h2><a href="">'
+                  '" class="recent-thumb" alt=""><h2><a href="single-product.html" onclick="setLoadSP('
+                  + t + ')">'
                   +data[i].NameSP+
                   '</a></h2><div class="product-sidebar-price"><ins>'
                   +data[i].SaleSP+
-                  '</ins> <del>'
+                  '<sup>đ</sup></ins> <del>'
                   +data[i].money+
-                  '</del></div></div>';
-
+                  '<sup>đ</sup></del></div></div>';
+      }
+                  
       document.getElementById("SPNew").innerHTML = txt;
   </script>
   <script>
     // San pham ban chay
     txt = "";
-    n = data.length - 1;
+    var n = data.length - 1;
     for (var i=n; i >= n-4 && i>=0; i--)
-
-        txt += '<li><a href="'
-                +''+
-                '">'
-                +data[i].NameSP+
-                '</a></li>';
+    {
+        var t = "'" + data[i].LinkImageSP + "'";
+        txt += '<li><a href="single-product.html" onclick="setLoadSP('
+                + t + ')">' + data[i].NameSP + '</a></li>';
+    }
 
     document.getElementById("SPBanChay").innerHTML = txt;
 </script>
