--- a/contact.html
+++ b/contact.html
@@ -196,8 +196,8 @@
             <div class="shopping-item">
               <a href="cart.html">
                 <i class="fa fa-shopping-cart"></i>
-                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$100</span>
-                <span class="product-count">99</span>
+                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt"></span>
+                <span class="product-count"></span>
                 </a>
             </div>
           </div>
@@ -584,6 +584,7 @@
 
     <!-- Main Script -->
     <script src="js/main.js"></script>
+    <script src="js/shoppingcart.js"></script>
 
     <!-- Slider -->
     <script type="text/javascript" src="js/bxslider.min.js"></script>
