--- a/shop.html
+++ b/shop.html
@@ -40,11 +40,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
-        #Filter .form-group a {
-            
-        }
-    </style>
 </head>
 
 <body onload="load(1, data)">
@@ -144,8 +139,8 @@
             <div class="shopping-item" ondrop="dropCart(event)" ondragover="allowDrop(event)">
               <a href="cart.html">
                 <i class="fa fa-shopping-cart"></i>
-                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt">$0</span>
-                <span class="product-count">0</span>
+                <span class="hidden">Giỏ Hàng - </span><span class="cart-amunt"></span>
+                <span class="product-count"></span>
               </a>
             </div>
           </div>
