--- a/shop.html
+++ b/shop.html
@@ -293,7 +293,7 @@
                                     <option value="Thú bông POKEMON">Thú bông POKEMON</option>
                                 </select>
                             </div>
-    <!-- 
+<!-- 
                             <div class="form-group col-md-1">
                                 <input type="text" class="form-control form-control-lg" placeholder="Gía từ">
                             </div>
@@ -301,9 +301,9 @@
                             <div class="form-group col-md-1">
                                 <input type="text" class="form-control form-control-lg" placeholder="đến">
                             </div>
-     -->
+-->
                             <div class="form-group">
-                                <a class="page-link" style="height: 48px; font-size: 1.25rem;" onclick="loadmoi();">Lọc</a>
+                                <a class="page-link" style="height: 48px; font-size: 1.25rem; background:#8395d6; color:#fff" onclick="load(1, testFilter(txtFilter));">Lọc</a>
                             </div>
                         </div>
                     </form>
@@ -513,13 +513,6 @@
     <!-- Slider -->
     <script type="text/javascript" src="js/bxslider.min.js"></script>
     <script type="text/javascript" src="js/script.slider.js"></script>
-
-    <script>
-        function loadmoi()
-        {
-            load(1, testFilter(txtFilter)); 
-        }
-    </script>
 </body>
 
 </html>
