--- a/shop.html
+++ b/shop.html
@@ -286,8 +286,8 @@
                             </div>
 
                             <div class="form-group col-md-3">
-                                <select id="inputState" class="form-control form-control-lg" onChange="getLoai(this);">
-                                    <option value="all">Tất cả</option>
+                                <select id="inputState" class="form-control form-control-lg" onChange="shopFilter(this);">
+                                    <option value="Tất cả">Tất cả</option>
                                     <option value="Thú bông nhỏ">Thú bông nhỏ</option>
                                     <option value="Thú bông lớn">Thú bông lớn</option>
                                     <option value="Thú bông POKEMON">Thú bông POKEMON</option>
@@ -302,9 +302,9 @@
                                 <input type="text" class="form-control form-control-lg" placeholder="đến">
                             </div>
      -->
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <a class="page-link" style="height: 48px; font-size: 1.25rem;" onclick="loadmoi();">Lọc</a>
-                            </div>
+                            </div> -->
                         </div>
                     </form>
                 </div>
@@ -515,9 +515,11 @@
     <script type="text/javascript" src="js/script.slider.js"></script>
 
     <script>
-        function loadmoi()
+        function shopFilter(sender)
         {
-            load(1, testFilter(txtFilter)); 
+          var filterStr = $(sender).val();
+          var filtedData = data.filter(exp => (filterStr=="Tất cả")?true:(exp.Category == filterStr));
+          load(1, filtedData); 
         }
     </script>
 </body>
