--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$100</ins> <del>$120</del>
+                    <ins>100000<sup>đ</sup></ins> <del>120000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -423,7 +423,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$200</ins> <del>$230</del>
+                    <ins>200000<sup>đ</sup></ins> <del>230000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -446,7 +446,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$300</ins> <del>$600</del>
+                    <ins>300000<sup>đ</sup></ins> <del>600000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -469,7 +469,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$270</ins> <del>$300</del>
+                    <ins>270000<sup>đ</sup></ins> <del>300000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -492,7 +492,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$650</ins> <del>$700</del>
+                    <ins>650000<sup>đ</sup></ins> <del>700000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -515,7 +515,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$600</ins> <del>$800</del>
+                    <ins>600000<sup>đ</sup></ins> <del>800000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -538,7 +538,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$280</ins> <del>$400</del>
+                    <ins>280000<sup>đ</sup></ins> <del>400000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -561,7 +561,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$69</ins> <del>$79</del>
+                    <ins>69000<sup>đ</sup></ins> <del>79000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -584,7 +584,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$1000</ins> <del>$1100</del>
+                    <ins>1000000<sup>đ</sup></ins> <del>1100000<sup>đ</sup></del>
                   </div>
                 </div>
 
@@ -607,7 +607,7 @@
                   </h2>
 
                   <div class="product-carousel-price">
-                    <ins>$5000</ins> <del>$5200</del>
+                    <ins>5000000<sup>đ</sup></ins> <del>5200000<sup>đ</sup></del>
                   </div>
                 </div>
   
@@ -665,7 +665,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$300</ins> <del>$600</del>
+                  <ins>300000<sup>đ</sup></ins> <del>600000<sup>đ</sup></del>
                 </div>
               </div>
 
@@ -684,7 +684,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$280</ins> <del>$400</del>
+                  <ins>280000<sup>đ</sup></ins> <del>400000<sup>đ</sup></del>
                 </div>
               </div>
 
@@ -703,7 +703,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$600</ins> <del>$800</del>
+                  <ins>600000<sup>đ</sup></ins> <del>800000<sup>đ</sup></del>
                 </div>
               </div>
 
@@ -730,7 +730,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$200</ins> <del>$230</del>
+                  <ins>200000<sup>đ</sup></ins> <del>230000<sup>đ</sup></del>
                 </div>
               </div>
 
@@ -749,7 +749,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$400</ins> <del>$450</del>
+                  <ins>400000<sup>đ</sup></ins> <del>450000<sup>đ</sup></del>
                 </div>
               </div>
 
@@ -768,7 +768,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$650</ins> <del>$700</del>
+                  <ins>650000<sup>đ</sup></ins> <del>700000<sup>đ</sup></del>
                 </div>
               </div>
 
@@ -795,7 +795,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$5000</ins> <del>$5200</del>
+                  <ins>5000000<sup>đ</sup></ins> <del>5200000<sup>đ</sup></del>
                 </div>
               </div>
 
@@ -814,7 +814,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$1000</ins> <del>$1100</del>
+                  <ins>1000000<sup>đ</sup></ins> <del>1100000<sup>đ</sup></del>
                 </div>
               </div>
 
@@ -833,7 +833,7 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="product-wid-price">
-                  <ins>$69</ins> <del>$79</del>
+                  <ins>69000<sup>đ</sup></ins> <del>79000<sup>đ</sup></del>
                 </div>
               </div>
 
