Fix Shop Page, Add Shop Page Sort

--- a/cart.html
+++ b/cart.html
@@ -60,9 +60,7 @@
                   <a href="cart.html"><i class="fa fa-user"></i> Giỏ hàng của tôi</a>
                 </li>
                 <li>
-                  <a href="checkout.html"
-                    ><i class="fa fa-user"></i> Phản hồi</a
-                  >
+                  <a href="checkout.html"><i class="fa fa-user"></i> Phản hồi</a>
                 </li>
                 <li>
                   <a
@@ -71,8 +69,7 @@
                     data-target="#login-dialog"
                     onclick="switchForm('login')"
                   >
-                    <i class="fa fa-user"></i> Đăng nhập</a
-                  >
+                    <i class="fa fa-user"></i> Đăng nhập</a>
                 </li>
               </ul>
             </div>
@@ -87,21 +84,16 @@
                     data-hover="dropdown"
                     class="dropdown-toggle"
                     href="#"
-                    ><span class="key">Tiền tệ : </span
-                    ><span class="value"
-                      >VNĐ <span class="flag-icon flag-icon-vn"></span></span
-                    ><b class="caret"></b
-                  ></a>
+                    >
+                    <span class="key">Tiền tệ : </span>
+                    <span class="value">VNĐ <span class="flag-icon flag-icon-vn"></span></span><b class="caret"></b>
+                  </a>
                   <ul class="dropdown-menu" style="display: none;">
                     <li class="dropdown-item">
-                      <a href="#"
-                        ><span class="flag-icon flag-icon-us"></span> USD</a
-                      >
+                      <a href="#"><span class="flag-icon flag-icon-us"></span> USD</a>
                     </li>
                     <li class="dropdown-item">
-                      <a href="#"
-                        ><span class="flag-icon flag-icon-vn"></span> VNĐ</a
-                      >
+                      <a href="#"><span class="flag-icon flag-icon-vn"></span> VNĐ</a>
                     </li>
                   </ul>
                 </li>
@@ -112,22 +104,18 @@
                     data-hover="dropdown"
                     class="dropdown-toggle"
                     href="#"
-                    ><span class="key">Ngôn ngữ : </span
-                    ><span class="value">Tiếng Việt </span
-                    ><span class="flag-icon flag-icon-vn"></span
-                    ><b class="caret"></b
-                  ></a>
+                    >
+                    <span class="key">Ngôn ngữ : </span>
+                    <span class="value">Tiếng Việt </span><span class="flag-icon flag-icon-vn"></span>
+                    <b class="caret"></b>
+                  </a>
                   <ul class="dropdown-menu" style="display: none;">
                     <li class="dropdown-item">
-                      <a href="#"
-                        ><span class="flag-icon flag-icon-us"></span> English</a
-                      >
+                      <a href="#"><span class="flag-icon flag-icon-us"></span> English</a>
                     </li>
                     <li class="dropdown-item">
-                      <a href="#"
-                        ><span class="flag-icon flag-icon-vn"></span>
-                        Tiếng Việt</a
-                      >
+                      <a href="#"><span class="flag-icon flag-icon-vn"></span>
+                        Tiếng Việt</a>
                     </li>
                   </ul>
                 </li>
@@ -198,9 +186,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="shop.html">
-                  <span class="nav-hidden"
-                    ><span class="fa fa-2x fa-shopping-cart"></span><br
-                  /></span>
+                  <span class="nav-hidden"><span class="fa fa-2x fa-shopping-cart"></span><br/></span>
                   Cửa hàng
                 </a>
               </li>
@@ -229,9 +215,9 @@
                   class="dropdown-menu dropdown-menu-left"
                   aria-labelledby="category-dropdown"
                 >
-                  <a href="shop.html" class="dropdown-item">Thú bông nhỏ</a>
-                  <a href="shop.html" class="dropdown-item">Thú bông lớn</a>
-                  <a href="shop.html" class="dropdown-item">Thú bông pokemon</a>
+                <a href="shop.html?category=Thú bông nhỏ" class="dropdown-item">Thú bông nhỏ</a>
+                <a href="shop.html?category=Thú bông lớn" class="dropdown-item">Thú bông lớn</a>
+                <a href="shop.html?category=Thú bông POKEMON" class="dropdown-item">Thú bông POKEMON</a>
                 </div>
               </li>
               <li class="nav-item active">
@@ -325,7 +311,7 @@
                                     <thead>
                                         <tr>
                                             <th class="product-remove">&nbsp;</th>
-                                            <th class="product-thumbnail">&nbsp;</th>
+                                            <th class="product-thumbnail">Sản phẩm</th>
                                             <th class="product-name">Tên sản phẩm</th>
                                             <th class="product-price">Giá</th>
                                             <th class="product-quantity">Số lượng</th>
@@ -439,7 +425,7 @@
                                     </table>
                                 </div>
 
-
+                                <div style="display: none;">
                                 <!-- <form method="post" action="#" class="shipping_calculator">
                                     <h2><a class="shipping-calculator-button" data-toggle="collapse" href="#calcalute-shipping-wrap"
                                             aria-expanded="false" aria-controls="calcalute-shipping-wrap">Calculate
@@ -712,7 +698,7 @@
 
                                     </section>
                                 </form> -->
-
+                                </div>
 
                             </div>
                         </div>
@@ -758,9 +744,9 @@
             <div class="footer-menu">
               <h2 class="footer-wid-title">Danh Mục</h2>
               <ul>
-                <li><a href="shop.html">Thú bông nhỏ</a></li>
-                <li><a href="shop.html">Thú bông lớn</a></li>
-                <li><a href="shop.html">Thú bông POKEMON</a></li>
+                <li><a href="shop.html?category=Thú bông nhỏ" class="dropdown-item">Thú bông nhỏ</a></li>
+                <li><a href="shop.html?category=Thú bông lớn" class="dropdown-item">Thú bông lớn</a></li>
+                <li><a href="shop.html?category=Thú bông POKEMON" class="dropdown-item">Thú bông POKEMON</a></li>
               </ul>
             </div>
           </div>
@@ -867,7 +853,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store &copy 2018</span>
+            <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store &copy; 2018</span>
           </div>
         </div>
       </div>
