--- a/contact.html
+++ b/contact.html
@@ -274,9 +274,9 @@
                   class="dropdown-menu dropdown-menu-left"
                   aria-labelledby="category-dropdown"
                 >
-                  <a href="shop.html" class="dropdown-item">Thú bông nhỏ</a>
-                  <a href="shop.html" class="dropdown-item">Thú bông lớn</a>
-                  <a href="shop.html" class="dropdown-item">Thú bông pokemon</a>
+                  <a href="shop.html?category=Thú bông nhỏ" class="dropdown-item">Thú bông nhỏ</a>
+                  <a href="shop.html?category=Thú bông lớn" class="dropdown-item">Thú bông lớn</a>
+                  <a href="shop.html?category=Thú bông POKEMON" class="dropdown-item">Thú bông POKEMON</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -417,9 +417,9 @@
             <div class="footer-menu">
               <h2 class="footer-wid-title">Danh Mục</h2>
               <ul>
-                <li><a href="shop.html">Thú bông nhỏ</a></li>
-                <li><a href="shop.html">Thú bông lớn</a></li>
-                <li><a href="shop.html">Thú bông POKEMON</a></li>
+                <li><a href="shop.html?category=Thú bông nhỏ" class="dropdown-item">Thú bông nhỏ</a></li>
+                <li><a href="shop.html?category=Thú bông lớn" class="dropdown-item">Thú bông lớn</a></li>
+                <li><a href="shop.html?category=Thú bông POKEMON" class="dropdown-item">Thú bông POKEMON</a></li>
               </ul>
             </div>
           </div>
@@ -559,7 +559,7 @@
           </div>
           <div class="modal-footer">
             <span style="margin: 0 auto;font-size: 13px; color: #8f8686;"
-              >Bông Xù Store &copy 2018</span
+              >Bông Xù Store &copy; 2018</span
             >
           </div>
         </div>
