--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
                   class="dropdown-menu dropdown-menu-left"
                   aria-labelledby="category-dropdown"
                 >
-                  <a href="shop.html" class="dropdown-item">Thú bông nhỏ</a>
-                  <a href="shop.html" class="dropdown-item">Thú bông lớn</a>
-                  <a href="shop.html" class="dropdown-item">Thú bông pokemon</a>
+                  <a href="shop.html?category=Thú bông nhỏ" class="dropdown-item">Thú bông nhỏ</a>
+                  <a href="shop.html?category=Thú bông lớn" class="dropdown-item">Thú bông lớn</a>
+                  <a href="shop.html?category=Thú bông POKEMON" class="dropdown-item">Thú bông POKEMON</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -305,9 +305,8 @@
                 <span class="primary">GIẢM GIÁ <strong> 30%</strong></span>
               </h2>
               <h4 class="caption subtitle">Mua gấu tặng kèm người.</h4>
-              <a class="caption button-radius" href="<single-product class="html"></single-product>
-                <span class="icon"></span>Mua ngay</a
-              >
+              <a class="caption button-radius" href="single-product.html?id=1" class="html">
+                <span class="icon"></span>Mua ngay</a>
             </div>
           </li>
           <li>
@@ -881,9 +880,9 @@
             <div class="footer-menu">
               <h2 class="footer-wid-title">Danh Mục</h2>
               <ul>
-                <li><a href="shop.html">Thú bông nhỏ</a></li>
-                <li><a href="shop.html">Thú bông lớn</a></li>
-                <li><a href="shop.html">Thú bông POKEMON</a></li>
+                <li><a href="shop.html?category=Thú bông nhỏ" class="dropdown-item">Thú bông nhỏ</a></li>
+                <li><a href="shop.html?category=Thú bông lớn" class="dropdown-item">Thú bông lớn</a></li>
+                <li><a href="shop.html?category=Thú bông POKEMON" class="dropdown-item">Thú bông POKEMON</a></li>
               </ul>
             </div>
           </div>
@@ -990,7 +989,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store &copy 2018</span>
+            <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store ; 2018</span>
           </div>
         </div>
       </div>
