--- a/shop.html
+++ b/shop.html
@@ -40,9 +40,12 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Product Data -->
+    <script src="var.js"></script>
 </head>
 
-<body onload="load(1, data)">
+<body>
 
     <div class="header-area">
       <div class="container">
@@ -206,18 +209,16 @@
                   aria-expanded="false"
                   href="#"
                 >
-                  <span class="nav-hidden"
-                    ><span class="fa fa-2x fa-list-ul"></span><br
-                  /></span>
+                  <span class="nav-hidden"><span class="fa fa-2x fa-list-ul"></span><br/></span>
                   Danh mục
                 </a>
                 <div
                   class="dropdown-menu dropdown-menu-left"
                   aria-labelledby="category-dropdown"
                 >
-                  <a href="shop.html" class="dropdown-item">Thú bông nhỏ</a>
-                  <a href="shop.html" class="dropdown-item">Thú bông lớn</a>
-                  <a href="shop.html" class="dropdown-item">Thú bông pokemon</a>
+                  <a href="shop.html?category=Thú bông nhỏ" class="dropdown-item">Thú bông nhỏ</a>
+                  <a href="shop.html?category=Thú bông lớn" class="dropdown-item">Thú bông lớn</a>
+                  <a href="shop.html?category=Thú bông POKEMON" class="dropdown-item">Thú bông POKEMON</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -277,57 +278,85 @@
 
     <div class="single-product-area">
         <div class="zigzag-bottom"></div>
-            <div class="container">
-                <div id="Filter">
-                    <form>
-                        <div class="form-row">
-                            <div class="form-group col-md-2">
-                                <p style="padding: 5px; font-size: 22px;">Loại mặt hàng:</p>
-                            </div>
 
-                            <div class="form-group col-md-3">
-                                <select id="inputState" class="form-control form-control-lg" onChange="shopFilter(this);">
-                                    <option value="Tất cả">Tất cả</option>
-                                    <option value="Thú bông nhỏ">Thú bông nhỏ</option>
-                                    <option value="Thú bông lớn">Thú bông lớn</option>
-                                    <option value="Thú bông POKEMON">Thú bông POKEMON</option>
-                                </select>
-                            </div>
-<!-- 
-                            <div class="form-group col-md-1">
-                                <input type="text" class="form-control form-control-lg" placeholder="Gía từ">
-                            </div>
-
-                            <div class="form-group col-md-1">
-                                <input type="text" class="form-control form-control-lg" placeholder="đến">
-                            </div>
-     -->
-                            <!-- <div class="form-group">
-                                <a class="page-link" style="height: 48px; font-size: 1.25rem;" onclick="loadmoi();">Lọc</a>
-                            </div> -->
+        <div id="shop-filter" class="row justify-content-center">
+          <div class="row container mb-3">
+              <p class="d-inline-block p-2 m-0 font-weight-bold col-lg-2">Loại mặt hàng:</p>
+              <select id="categoryFilter" class="form-control form-control-sm col-lg-3" onChange="shopFilter(this.value);">
+                  <option value="" selected>Tất cả</option>
+                  <option value="Thú bông nhỏ">Thú bông nhỏ</option>
+                  <option value="Thú bông lớn">Thú bông lớn</option>
+                  <option value="Thú bông POKEMON">Thú bông POKEMON</option>
+              </select>
+              <div class="col-lg-5"></div>
+              <div class="col-lg-2 p-2">
+                <p class="d-inline-block m-0 font-weight-bold">Sắp xếp:</p>
+                <a href="javascript:shopSort(0)" >Tăng</a>
+                &nbsp;
+                <a href="javascript:shopSort(1)" >Giảm</a>
+              </div>
+          </div>
+        </div>
+        <div class="product-show container">
+          <div class="row justify-content-center">
+            <script>
+              var filtedData = data;
+              const maxLoad = 12;
+              function loadProduct(page, array) {
+                var container = $('.single-product-area .product-show > .row');
+                var content = "";
+                for (var i = (page-1)*12; i < Math.min(page*12,array.length); i++) {
+                  var it = array[i];
+                  content += `
+                    <div class="col-lg-3 col-md-4 col-sm-6" style="max-width: 300px; padding: 0">
+                      <div class="single-shop-product" ondragstart="itemDrag(event)" draggable="true" data-itemid="${it.Id}">
+                        <div class="product-upper">
+                          <a href="single-product.html?id=${it.Id}" draggable="false">
+                            <img src="${it.LinkImageSP}" alt="" style="display: block; margin: 0 auto; width: 250px; height: 280px;" draggable="false">
+                            <h2>${it.NameSP}</h2>
+                          </a>
                         </div>
-                    </form>
-                </div>
-            </div>
-        <div class="container">
-            <div class="row">
+                        <div class="product-carousel-price">
+                          <ins>${it.SaleSP}<sup>đ</sup></ins> <del>${it.money}<sup>đ</sup></del>
+                        </div>
 
-            </div>
+                        <div class="product-option-shop">
+                          <a href="#" class="add_to_cart_button" data-quantity="1" data-product_sku="" data-product_id="70" rel="nofollow" onclick="addToCart('${it.Id}'); return false;" draggable="false">Thêm vào giỏ hàng</a>
+                        </div>
+                      </div>
+                    </div>`
+                }
+                container.html(content);
+              }
+            </script>
+          </div>
         </div>
 
-        <div class="row">
+        <div id="shop-pagination" class="row">
             <div class="col-md-12">
                 <div class="product-pagination text-center">
                     <nav>
-                        <ul class="pagination justify-content-center" id="">
-                             
+                        <ul class="pagination justify-content-center">
+
+                          <script>
+                            function generatePage() {
+                              var pageNumber = Math.ceil(filtedData.length/maxLoad);
+                              var content = `<li class="page-item"><a href="javascript:loadProduct(${1}, filtedData)" class="page-link" href="" aria-label="Trước"><span aria-hidden="true">&laquo;</span></a></li>`;
+                              for (var i = 1; i <= pageNumber; i++) {
+                                content += `<li class="page-item"><a href="javascript:loadProduct(${i}, filtedData)" class="page-link">${i}</a></li>`;
+                              }
+                              content += `<li class="page-item"><a href="javascript:loadProduct(${pageNumber}, filtedData)" class="page-link" href="" aria-label="Sau"><span aria-hidden="true">&raquo;</span></a></li>`;
+                              $('#shop-pagination .product-pagination .pagination').html(content);
+                            }
+                          </script> 
+<!--                              
                             <li class="page-item"><a href="javascript:void(0)" class="page-link" href="" aria-label="Trước"><span aria-hidden="true">&laquo;</span></a></li>
-                            <li class="page-item"><a href="javascript:void(0)" class="page-link" onclick="load(1, data)">1</a></li>
-                            <li class="page-item"><a href="javascript:void(0)" class="page-link" onclick="load(2, data)">2</a></li>
-                            <li class="page-item"><a href="javascript:void(0)" class="page-link" onclick="load(3, data)">3</a></li>
-                            <li class="page-item"><a href="javascript:void(0)" class="page-link" onclick="load(4, data)">4</a></li>
-                            <li class="page-item"><a href="javascript:void(0)" class="page-link" onclick="load(5, data)">5</a></li>
-                            <li class="page-item"><a href="javascript:void(0)" class="page-link" href="" aria-label="Sau"><span aria-hidden="true">&raquo;</span></a></li>
+                            <li class="page-item"><a href="javascript:loadProduct(1, filtedData)" class="page-link">1</a></li>
+                            <li class="page-item"><a href="javascript:loadProduct(2, filtedData)" class="page-link">2</a></li>
+                            <li class="page-item"><a href="javascript:loadProduct(3, filtedData)" class="page-link">3</a></li>
+                            <li class="page-item"><a href="javascript:loadProduct(4, filtedData)" class="page-link">4</a></li>
+                            <li class="page-item"><a href="javascript:loadProduct(5, filtedData)" class="page-link">5</a></li>
+                            <li class="page-item"><a href="javascript:void(0)" class="page-link" href="" aria-label="Sau"><span aria-hidden="true">&raquo;</span></a></li> -->
                             
                         </ul>
                     </nav>
@@ -336,7 +365,6 @@
         </div>
     </div>
 
-    <script src="var.js"></script>
 
 
     <div class="footer-top-area">
@@ -375,9 +403,9 @@
             <div class="footer-menu">
               <h2 class="footer-wid-title">Danh Mục</h2>
               <ul>
-                <li><a href="shop.html">Thú bông nhỏ</a></li>
-                <li><a href="shop.html">Thú bông lớn</a></li>
-                <li><a href="shop.html">Thú bông POKEMON</a></li>
+                <li><a href="shop.html?category=Thú bông nhỏ" class="dropdown-item">Thú bông nhỏ</a></li>
+                <li><a href="shop.html?category=Thú bông lớn" class="dropdown-item">Thú bông lớn</a></li>
+                <li><a href="shop.html?category=Thú bông POKEMON" class="dropdown-item">Thú bông POKEMON</a></li>
               </ul>
             </div>
           </div>
@@ -484,7 +512,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store &copy 2018</span>
+            <span style="margin: 0 auto;font-size: 13px; color: #8f8686;">Bông Xù Store &copy; 2018</span>
           </div>
         </div>
       </div>
@@ -515,12 +543,22 @@
     <script type="text/javascript" src="js/script.slider.js"></script>
 
     <script>
-        function shopFilter(sender)
-        {
-          var filterStr = $(sender).val();
-          var filtedData = data.filter(exp => (filterStr=="Tất cả")?true:(exp.Category == filterStr));
-          load(1, filtedData); 
-        }
+      function shopFilter(filterStr)
+      {
+        filtedData = data.filter(exp => (filterStr == "" || filterStr == 'undefined')?true:(exp.Category == filterStr));
+        loadProduct(1, filtedData); 
+        generatePage();
+      }
+      function shopSort(desc) {
+        filtedData.sort((a,b) => desc ? a.SaleSP < b.SaleSP : a.SaleSP > b.SaleSP);
+        loadProduct(1, filtedData);
+      }
+      $(document).ready(function() {
+        var filterStr = (new URLSearchParams(window.location.search)).get('category') || "";
+        // console.log($('#categoryFilter').text());
+        $('#categoryFilter').val(filterStr);
+        shopFilter(filterStr);
+      });
     </script>
 </body>
 
