--- a/cart.html
+++ b/cart.html
@@ -884,7 +884,8 @@
     <script type="text/javascript" src="js/script.slider.js"></script>
     
     <script>
-        // San pham moi 
+        // San pham moi
+        var txt = "";
         var n = data.length - 1;
         for (var i=n; i >= n-3 && i>=0; i--)
             txt += `<div class="thubmnail-recent">
