--- a/checkout.html
+++ b/checkout.html
@@ -304,6 +304,7 @@
                         <div id="SPNew">
                             <script>
                                 // San pham moi 
+                                var txt = "";
                                 var n = data.length - 1;
                                 for (var i=n; i >= n-3 && i>=0; i--)
                                     txt += `<div class="thubmnail-recent">
