--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 Gấu bông cặp <span class="primary">GIẢM GIÁ <strong> 50%</strong></span>
               </h2>
               <h4 class="caption subtitle">Siêu đẹp, siêu mềm.</h4>
-              <a class="caption button-radius" href="single-product.html"
+              <a class="caption button-radius" href="single-product.html?id=10"
                 ><span class="icon"></span>Mua ngay</a
               >
             </div>
@@ -305,7 +305,7 @@
                 <span class="primary">GIẢM GIÁ <strong> 30%</strong></span>
               </h2>
               <h4 class="caption subtitle">Mua gấu tặng kèm người.</h4>
-              <a class="caption button-radius" href="single-product.html?id=1" class="html">
+              <a class="caption button-radius" href="single-product.html?id=17" class="html">
                 <span class="icon"></span>Mua ngay</a>
             </div>
           </li>
@@ -316,7 +316,7 @@
                 Bộ chó Husky <span class="primary">GIẢM GIÁ <strong> 25%</strong></span>
               </h2>
               <h4 class="caption subtitle">Đa kích cỡ, tha hồ lựa chọn.</h4>
-              <a class="caption button-radius" href="single-product.html"
+              <a class="caption button-radius" href="single-product.html?id=22"
                 ><span class="icon"></span>Mua ngay</a
               >
             </div>
@@ -328,7 +328,7 @@
                 Thú bông POKEMON <span class="primary">Thế hệ <strong>MỚI</strong></span>
               </h2>
               <h4 class="caption subtitle">Bộ Eevee tiến hóa.</h4>
-              <a class="caption button-radius" href="single-product.html"
+              <a class="caption button-radius" href="single-product.html?id=55"
                 ><span class="icon"></span>Mua ngay</a
               >
             </div>
@@ -652,10 +652,10 @@
               <a href="shop.html" class="wid-view-more">Xem tất cả</a>
 
               <div class="single-wid-product">
-                <a href="single-product.html">
+                <a href="single-product.html?id=10">
                   <img src="images/small/img10.jpg" alt="" class="product-thumb"/>
                 </a>
-                <h2><a href="single-product.html">Gấu bông cặp VIOLET-PINK</a></h2>
+                <h2><a href="single-product.html?id=10">Gấu bông cặp VIOLET-PINK</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> 
                   <i class="fa fa-star"></i>
@@ -670,13 +670,13 @@
 
 
               <div class="single-wid-product">
-                <a href="single-product.html"
+                <a href="single-product.html?id=17"
                   ><img
                     src="images/large/img17.jpg"
                     alt=""
                     class="product-thumb"
                 /></a>
-                <h2><a href="single-product.html">Gấu bông to loại 1</a></h2>
+                <h2><a href="single-product.html?id=17">Gấu bông to loại 1</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -689,13 +689,13 @@
 
 
               <div class="single-wid-product">
-                <a href="single-product.html"
+                <a href="single-product.html?id=22"
                   ><img
                     src="images/large/img22.jpg"
                     alt=""
                     class="product-thumb"
                 /></a>
-                <h2><a href="single-product.html">Bộ Husky Nga</a></h2>
+                <h2><a href="single-product.html?id=22">Bộ Husky Nga</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -715,14 +715,15 @@
               <h2 class="product-wid-title">Được xem nhiều</h2>
               <a href="shop.html" class="wid-view-more">Xem tất cả</a>
                 
-                <div class="single-wid-product">
-                <a href="single-product.html"
-                  ><img
+              <div class="single-wid-product">
+                <a href="single-product.html?id=6">
+                  <img
                     src="images/small/img6.jpg"
                     alt=""
                     class="product-thumb"
-                /></a>
-                <h2><a href="single-product.html">Gấu bông nhỏ loại 1</a></h2>
+                  >
+                </a>
+                <h2><a href="single-product.html?id=6">Gấu bông nhỏ loại 1</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -735,13 +736,13 @@
 
 
               <div class="single-wid-product">
-                <a href="single-product.html"
+                <a href="single-product.html?id=20"
                   ><img
                     src="images/large/img20.jpg"
                     alt=""
                     class="product-thumb"
                 /></a>
-                <h2><a href="single-product.html">Gấu bông to VIOLET</a></h2>
+                <h2><a href="single-product.html?id=20">Gấu bông to VIOLET</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -754,13 +755,13 @@
 
 
               <div class="single-wid-product">
-                <a href="single-product.html"
+                <a href="single-product.html?id=15"
                   ><img
                     src="images/large/img15.jpg"
                     alt=""
                     class="product-thumb"
                 /></a>
-                <h2><a href="single-product.html">Bộ Totoro</a></h2>
+                <h2><a href="single-product.html?id=15">Bộ Totoro</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -780,14 +781,14 @@
               <h2 class="product-wid-title">Mới nhất</h2>
               <a href="shop.html" class="wid-view-more">Xem tất cả</a>
                               
-                <div class="single-wid-product">
-                <a href="single-product.html"
+              <div class="single-wid-product">
+                <a href="single-product.html?id=55"
                   ><img
                     src="images/pokemon/img62.jpg"
                     alt=""
                     class="product-thumb"
                 /></a>
-                <h2><a href="single-product.html">Bộ Eevee tiến hóa</a></h2>
+                <h2><a href="single-product.html?id=55">Bộ Eevee tiến hóa</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -800,13 +801,13 @@
 
 
               <div class="single-wid-product">
-                <a href="single-product.html"
+                <a href="single-product.html?id=54"
                   ><img
                     src="images/pokemon/img61.jpg"
                     alt=""
                     class="product-thumb"
                 /></a>
-                <h2><a href="single-product.html">Bộ POKEMON tân binh</a></h2>
+                <h2><a href="single-product.html?id=54">Bộ POKEMON tân binh</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -819,13 +820,13 @@
 
 
               <div class="single-wid-product">
-                <a href="single-product.html"
+                <a href="single-product.html?id=23"
                   ><img
                     src="images/pokemon/img31.jpg"
                     alt=""
                     class="product-thumb"
                 /></a>
-                <h2><a href="single-product.html">Pikachu</a></h2>
+                <h2><a href="single-product.html?id=23">Pikachu</a></h2>
                 <div class="product-wid-rating">
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i> <i class="fa fa-star"></i>
